# X-Adapter

./: inference.py  pyproject.toml
model/: adapter.py  unet_adapter.py  utils.py
pipeline/: pipeline_sd_xl_adapter.py  pipeline_sd_xl_adapter_controlnet.py  pipeline_sd_xl_adapter_controlnet_img2img.py
scripts/: inference_controlnet.py  inference_ctrlnet_tile.py  inference_lora.py
