[tool.poetry]
name = "x-adapter"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = {version = ">=0.20.0", extras = ["torch"]}
transformers = "^4.42.3"
torch = ">=1.13.1"
torchvision = ">=0.14.1"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
